no longer cut off when there are long urls or words

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/vtmirage2/styles/classic_mirage_color_scheme/_general.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/vtmirage2/styles/classic_mirage_color_scheme/_general.scss
@@ -129,7 +129,16 @@ dl {
             min-width: 300px;
         }
     }
+    tr {
+        td {
+        
+            overflow:hidden;
+            word-wrap:break-word;
+            white-space:pre-wrap
+        }
+    }
 }
+
 
 .table legend {
     display: none;
